--- a/calendarstyle.css
+++ b/calendarstyle.css
@@ -35,10 +35,14 @@ body {
   display: flex;
   color: #247BA0;
 }
-#weekdays div {
+.weekdaysin {
+  /* font-size: 20px;
+  font-weight: 700; */
   width: 100px;
   padding: 10px;
+  margin: 5px;
 }
+
 #calendar {
   width: 100%;
   margin: auto;
