--- a/calendarstyle.css
+++ b/calendarstyle.css
@@ -51,7 +51,7 @@ body {
 }
 .day {
   width: 100px;
-  padding: 10px;
+  padding: 5px;
   height: 100px;
   cursor: pointer;
   box-sizing: border-box;
@@ -67,17 +67,23 @@ body {
 }
 
 .day + #currentDay {
-  background-color:#99C3F0;
+  background-color:#CBE1F9;
   border: 2px solid black;
 }
-.event {
+.eventstage1 {
   font-size: 10px;
+  font-weight: 800;
   padding: 3px;
-  background-color: #58bae4;
-  color: white;
+  margin: 0.5px;
+  max-width: 40px;
+  background-color: #BEBFCC;
+  color: black;
   border-radius: 5px;
-  max-height: 55px;
+  max-height: 20px;
   overflow: hidden;
+}
+.eventstage1:hover {
+  border: 2px solid black;
 }
 .padding {
   cursor: default !important;
