--- a/monthly_calendarstyle.css
+++ b/monthly_calendarstyle.css
@@ -1,25 +1,6 @@
 body {
-  /* display: flex; */
-  /* margin-top: 50px; */
-  /* justify-content: center; */
+
   background-color: #FFFCFF;
-}
-/* button {
-  width: 75px;
-  cursor: pointer;
-  box-shadow: 0px 0px 2px gray;
-  border: none;
-  outline: none;
-  padding: 5px;
-  border-radius: 5px;
-    background-color:#92a1d1;
-   color: white;
-} */
-.vguid_vacation_table{
-  display:none;
-}
-.createdfor_vacation_table{
-  display:none;
 }
 #header {
   padding: 10px;
@@ -29,32 +10,23 @@ body {
   display: flex;
   justify-content: space-between;
 }
-/* #header button {
 
-} */
 #container {
   width: 770px;
 }
-#weekdays {
-  width: 100%;
-  display: flex;
-  color: #247BA0;
-}
-.weekdaysin {
-  /* font-size: 20px;
-  font-weight: 700; */
-  width: 100px;
-  padding: 10px;
-  margin: 5px;
-}
-
 #calendar {
   width: 100%;
   margin: auto;
   display: flex;
   flex-wrap: wrap;
 }
-.day {
+.vguid_vacation_table{
+  display:none;
+}
+.createdfor_vacation_table{
+  display:none;
+}
+.month {
   position: relative;
 
   width: 100px;
@@ -69,11 +41,11 @@ body {
   flex-direction: column;
   justify-content: space-between;
 }
-.day:hover {
+.month:hover {
   background-color: #e8faed;
 }
 
-.day + #currentDay {
+.month + #currentMonth {
   background-color:#CBE1F9;
   outline: 2px solid black;
 }
@@ -226,49 +198,4 @@ body {
   cursor: default !important;
   background-color: #FFFCFF !important;
   box-shadow: none !important;
-}
-#newEventModal, #deleteEventModal {
-  display: none;
-  z-index: 20;
-  padding: 25px;
-  background-color: #e8f4fa;
-  box-shadow: 0px 0px 3px black;
-  border-radius: 5px;
-  width: 350px;
-  top: 100px;
-  left: calc(50% - 175px);
-  position: absolute;
-  font-family: sans-serif;
-}
-#eventTitleInput {
-  padding: 10px;
-  width: 100%;
-  box-sizing: border-box;
-  margin-bottom: 25px;
-  border-radius: 3px;
-  outline: none;
-  border: none;
-  box-shadow: 0px 0px 3px gray;
-}
-#eventTitleInput.error {
-  border: 2px solid red;
-}
-#cancelButton, #deleteButton {
-  background-color: #d36c6c;
-}
-#saveButton, #closeButton {
-  background-color: #92a1d1;
-}
-#eventText {
-  font-size: 14px;
-}
-#modalBackDrop {
-  display: none;
-  top: 0px;
-  left: 0px;
-  z-index: 10;
-  width: 100vw;
-  height: 100vh;
-  position: absolute;
-  background-color: rgba(0,0,0,0.8);
 }
